Unreleased
- QC::Worker#handle_failure logs the job and the error
- QC.default_queue= to set your own default queue. (can be used
  in testing to configure a mock queue)

Version 2.1.4
- update pg dependency to 0.15.1
- document logging behaviour

Version 2.1.3
- Use MultiJson (Ezekiel Templin: #106)

Version 2.1.2
- Use 64bit ints as default data types in PostgreSQL
- add process method in worker
- Allow percent-encoded socket paths in DATABASE_URL

Version 2.1.1
- update pg gem version

Version 2.1.0
- wrap connection execution in mutex making it thread safe
- cleanup logging
- refactor worker class making it more extensible
- added rdoc style docs for worker class

Version 2.0.5
- allow term signal to halt the lock_job function

Version 2.0.4
- provider a connection setter.

Version 2.0.3
- fix typo :(

Version 2.0.2
- remove scrolls dependency
- fix issue with notify not working on non-default queues

Version 2.0.1

Version 2.0.0
- simpler setup via QC::Setup.create (rake qc:create) & QC::Setup.drop (rake
qc:drop)
- simpler abstractions in implementation
- better support for instrumentation via log_yield hook in QC module
- multiple queues use one table with a queue_name column

Version 1.0.2
- update to latest okjson as the current has bugs

Version 1.0.1
- using OkJson instead of any sort of rubygem
- remove html from docs
- use parameterised queries
- don't set application name by default
- injection attack bug fixed in lock_head()
- notificaiton get sent on seperate chans for disjoint queues

Version 1.0.0rc1
- Removed json gem and relying on ruby 1.9.2's stdlib
- Added better documentation

Version 0.3.6pre
- Added listen/notify support configured by $QC_LISTENING_WORKER otherwise uses Kernel.sleep()

Version 0.3.5pre
- Removed debug statement. Mistake!

Version 0.3.4pre
- Added logging configured by $VERBOSE or $QC_VERBOSE.
- Added a method setup_child that gets called right after a worker forks.